added install step and documented in INSTALL.txt
Signed-off-by: hayati ayguen <h_ayguen@web.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 2.8)
 
+set (CMAKE_INSTALL_PREFIX /usr/local)
+message("CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX} (should be /usr/local)")
+
 project(rdstools)
+message("CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX} (should be /usr/local)")
 
 add_executable(hex2rds "hex2rds.c")
 
@@ -8,3 +12,4 @@ add_executable(srdsgrep "srdsgrep.c")
 
 add_executable(srdsmerge "srdsmerge.c")
 
+install(TARGETS hex2rds srdsgrep srdsmerge DESTINATION bin )
