added srdshashencode and minor fixes
srdshashencode: precodes/preconditions for better compression
removed unused variables
checked code with cppcheck

Signed-off-by: hayati ayguen <h_ayguen@web.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,4 +12,6 @@ add_executable(srdsgrep "srdsgrep.c")
 
 add_executable(srdsmerge "srdsmerge.c")
 
-install(TARGETS hex2rds srdsgrep srdsmerge DESTINATION bin )
+add_executable(srdshashencode "srdshashencode.c")
+
+install(TARGETS hex2rds srdsgrep srdsmerge srdshashencode DESTINATION bin )
