added tool srdscheck to check ordering; replaced 'sort -c' in script
* 'od .. |sort -c' took far too much time!

Signed-off-by: hayati ayguen <h_ayguen@web.de>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(srdsgrep "srdsgrep.c")
 
 add_executable(srdsmerge "srdsmerge.c")
 
+add_executable(srdscheck "srdscheck.c")
+
 add_executable(srdshashencode "srdshashencode.c")
 
-install(TARGETS hex2rds srdsgrep srdsmerge srdshashencode DESTINATION bin )
+install(TARGETS hex2rds srdsgrep srdsmerge srdscheck srdshashencode DESTINATION bin )
